# CryptNote

./: .gitignore  .gitmodules  CMakeLists.txt  CryptNote.pro  build.ps1  changepassworddialog.cpp  changepassworddialog.h  enterpassworddialog.cpp  enterpassworddialog.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  settings.cpp  settings.h  trans.ja.qm  trans.ja.ts  update_ts.ps1
